dodani svi jedinični testovi